[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scenes/Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/EmptyLevel.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/basic.theme" type="Theme" id=3]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.301961, 0.301961, 0.301961, 1 )
ambient_light_color = Color( 0.25098, 0.25098, 0.25098, 1 )
ambient_light_sky_contribution = 0.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="EmptyLevel" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 15, 10 )
environment = SubResource( 1 )
projection = 1
current = true
size = 12.5

[node name="Floor" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )
width = 10.1
height = 0.1
depth = 10.1
material = SubResource( 2 )

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, 0, 0, 0 )
shadow_enabled = true

[node name="WallNorth" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )
item_name = "walln"
color = 1
has_to_connect = true

[node name="WallSouth" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 5 )
item_name = "walls"

[node name="WallEast" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5, 0, 0 )
item_name = "walle"
color = 2
has_to_connect = true

[node name="WallWest" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 0, 0 )
item_name = "wallw"

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 48.0
margin_right = 512.0
margin_bottom = 84.0
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Well done!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LevelMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelMenu/HBoxContainer"]
margin_left = 516.0
margin_right = 756.0
margin_bottom = 600.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 2

[node name="NextButton" type="Button" parent="LevelMenu/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 540.0
margin_right = 120.0
margin_bottom = 560.0
rect_min_size = Vector2( 120, 0 )
theme = ExtResource( 3 )
text = "next level"

[node name="BackButton" type="Button" parent="LevelMenu/HBoxContainer/VBoxContainer"]
margin_top = 534.0
margin_right = 240.0
margin_bottom = 560.0
rect_min_size = Vector2( 240, 0 )
theme = ExtResource( 3 )
text = "back to menu"

[node name="Separator" type="Control" parent="LevelMenu/HBoxContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 240.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 20 )

[node name="Separator" type="Control" parent="LevelMenu/HBoxContainer"]
margin_left = 760.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 40, 0 )

[connection signal="mouse_entered" from="LevelMenu/HBoxContainer/VBoxContainer/NextButton" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/HBoxContainer/VBoxContainer/NextButton" to="." method="mouse_exited"]
[connection signal="pressed" from="LevelMenu/HBoxContainer/VBoxContainer/NextButton" to="." method="next_level"]
[connection signal="mouse_entered" from="LevelMenu/HBoxContainer/VBoxContainer/BackButton" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/HBoxContainer/VBoxContainer/BackButton" to="." method="mouse_exited"]
[connection signal="pressed" from="LevelMenu/HBoxContainer/VBoxContainer/BackButton" to="." method="back_to_menu"]
